# weather_tui

./: Cargo.toml  README.md
src/: main.rs  weather.rs
