[package]
name = "weather_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.19.0"
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde = { version = "1.0.204", features = ["derive"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
