[package]
name = "weather_tui"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = "0.4.38"
chrono-tz = "0.9.0"
open-meteo-rs = "0.0.4"
ratatui = "0.27.0"
reqwest = { version = "0.12.5", features = ["json"] }
serde_json = "1.0.122"
tokio = { version = "1.39.2", features = ["full"] }
tokio-macros = "2.4.0"
